fairly good results

--- a/prep.ipynb
+++ b/prep.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +115,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/b7/bvjyym4n5wl1lf69hry6ls1m0000gn/T/ipykernel_96907/2410565014.py:35: DtypeWarning: Columns (4) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/var/folders/b7/bvjyym4n5wl1lf69hry6ls1m0000gn/T/ipykernel_9369/2410565014.py:35: DtypeWarning: Columns (4) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  gageheight_df = pd.read_csv(gageheight_fp, sep='\\t', skiprows=27, usecols=[2, 3, 4])\n"
      ]
     },
@@ -139,7 +139,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/b7/bvjyym4n5wl1lf69hry6ls1m0000gn/T/ipykernel_96907/2410565014.py:44: DtypeWarning: Columns (4) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/var/folders/b7/bvjyym4n5wl1lf69hry6ls1m0000gn/T/ipykernel_9369/2410565014.py:44: DtypeWarning: Columns (4) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  watertemp_df = pd.read_csv(watertemp_fp, sep='\\t', skiprows=28, usecols=[2, 3, 4])\n"
      ]
     },
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -438,11 +438,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "observations.to_pickle('output/observations.pickle')"
+    "observations.to_pickle('output/observations.pickle')\n",
+    "observations.to_pickle('output/observations.pickle4', protocol=4)"
    ]
   }
  ],
