switch to prophet, archive other models

--- a/prep.ipynb
+++ b/prep.ipynb
@@ -115,7 +115,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/b7/bvjyym4n5wl1lf69hry6ls1m0000gn/T/ipykernel_9369/2410565014.py:35: DtypeWarning: Columns (4) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/var/folders/b7/bvjyym4n5wl1lf69hry6ls1m0000gn/T/ipykernel_23716/2410565014.py:35: DtypeWarning: Columns (4) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  gageheight_df = pd.read_csv(gageheight_fp, sep='\\t', skiprows=27, usecols=[2, 3, 4])\n"
      ]
     },
@@ -139,7 +139,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/b7/bvjyym4n5wl1lf69hry6ls1m0000gn/T/ipykernel_9369/2410565014.py:44: DtypeWarning: Columns (4) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/var/folders/b7/bvjyym4n5wl1lf69hry6ls1m0000gn/T/ipykernel_23716/2410565014.py:44: DtypeWarning: Columns (4) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  watertemp_df = pd.read_csv(watertemp_fp, sep='\\t', skiprows=28, usecols=[2, 3, 4])\n"
      ]
     },
@@ -438,12 +438,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "observations.to_pickle('output/observations.pickle')\n",
-    "observations.to_pickle('output/observations.pickle4', protocol=4)"
+    "observations.to_pickle('output/observations.pickle4', protocol=4)\n",
+    "observations.to_csv('output/observations.csv')"
    ]
   }
  ],
