update/retrain deployed on lambda

--- a/prep.ipynb
+++ b/prep.ipynb
@@ -175,6 +175,7 @@
     "    cloudcover_str = r.get_additional_field('GD1').sky_cover_summation['coverage'].get_numeric()\n",
     "    if cloudcover_str == '': cloudcover = 0\n",
     "    else: cloudcover = float(cloudcover_str)\n",
+    "    if cloudcover > 4: cloudcover = None # this will be interpolated\n",
     "  precip = 0\n",
     "  if 'AU1' in r.additional().keys():\n",
     "    precip_str = r.get_additional_field('AU1').present_weather_array['intensity']\n",
