tbh, not sure what this commit is, but it was staged last time i worked on this

--- a/notebooks/prep.ipynb
+++ b/notebooks/prep.ipynb
@@ -31,11 +31,10 @@
     "import pandas as pd\n",
     "\n",
     "# import matplotlib\n",
-    "%matplotlib inline\n",
+    "%matplotlib widget\n",
     "import matplotlib\n",
     "\n",
-    "plt = matplotlib.pyplot\n",
-    "matplotlib.rcParams['figure.figsize'] = [15, 8]"
+    "plt = matplotlib.pyplot"
    ]
   },
   {
