--- a/notebooks/live/validate_model.ipynb
+++ b/notebooks/live/validate_model.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import sys\n",
-    "sys.path.insert(0, '../backend/src')\n",
+    "sys.path.insert(0, '../../backend/src')\n",
     "\n",
     "# import matplotlib\n",
     "%matplotlib widget\n",
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -56,7 +56,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "82724214802e4fc28c866d71f7c986db",
+       "model_id": "ba8eb20578a4451dbf1bb7195598311b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -132,9 +132,42 @@
      ]
     },
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                       ds  snow  precip  snowdepth  cloudcover    airtemp  \\\n",
+      "24441 2023-06-23 12:00:00  0.01     0.0       0.01       100.0  66.900002   \n",
+      "24442 2023-06-23 13:00:00  0.00     0.0       0.00       100.0  67.199997   \n",
+      "24443 2023-06-23 14:00:00  0.00     0.0       0.00       100.0  68.800003   \n",
+      "24444 2023-06-23 15:00:00  0.00     0.0       0.00       100.0  69.800003   \n",
+      "24445 2023-06-23 16:00:00  0.00     0.0       0.00       100.0  71.699997   \n",
+      "...                   ...   ...     ...        ...         ...        ...   \n",
+      "26275 2023-09-07 22:00:00  0.00     0.0       0.00         0.0  58.000000   \n",
+      "26276 2023-09-07 23:00:00  0.00     0.0       0.00         0.0  58.000000   \n",
+      "26277 2023-09-08 00:00:00  0.00     0.0       0.00         0.0  58.000000   \n",
+      "26278 2023-09-08 01:00:00  0.00     0.0       0.00         0.0  58.000000   \n",
+      "26279 2023-09-08 02:00:00  0.00     0.0       0.00         0.0  58.000000   \n",
+      "\n",
+      "               y  \n",
+      "24441  69.260002  \n",
+      "24442  69.260002  \n",
+      "24443  69.080002  \n",
+      "24444  69.080002  \n",
+      "24445  69.440002  \n",
+      "...          ...  \n",
+      "26275  73.400002  \n",
+      "26276  72.139999  \n",
+      "26277  71.599998  \n",
+      "26278  70.339996  \n",
+      "26279  69.440002  \n",
+      "\n",
+      "[1839 rows x 7 columns]\n"
+     ]
+    },
+    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2aba8e62d9f14a93a068e5353d3d7d27",
+       "model_id": "4208f01f0d8a43afa007827d83f9efbc",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1110,7 +1143,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7914aa11563a486f8b95c54c4b592e5e",
+       "model_id": "6f9f0132b67f43a9b02063d010d4fab0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1119,63 +1152,63 @@
        "    'data': [{'fillcolor': 'rgba(45, 146, 255, 0.2)',\n",
        "              'line': {'color': 'rgba(45, 146, 255, 0.2)', 'width': 1},\n",
        "              'mode': 'lines',\n",
-       "              'name': '<b style=\"color:sandybrown\">[R]</b> yhat48 5.0% <i style=\"color:#fc9944\">~2h</i>',\n",
+       "              'name': '<b style=\"color:sandybrown\">[R]</b> yhat24 5.0% <i style=\"color:#fc9944\">~2h</i>',\n",
        "              'type': 'scatter',\n",
-       "              'uid': '50c09a53-97c1-4c08-95d4-3d0590063dd7',\n",
-       "              'x': array([datetime.datetime(2023, 7, 1, 11, 0),\n",
-       "                          datetime.datetime(2023, 7, 1, 12, 0),\n",
-       "                          datetime.datetime(2023, 7, 1, 14, 0), ...,\n",
-       "                          datetime.datetime(2023, 9, 6, 23, 0),\n",
-       "                          datetime.datetime(2023, 9, 7, 1, 0),\n",
-       "                          datetime.datetime(2023, 9, 7, 2, 0)], dtype=object),\n",
-       "              'y': array([66.54014587, 66.87895203, 67.73348999, ..., 72.75883484, 72.52360535,\n",
-       "                          72.18461609])},\n",
+       "              'uid': 'd31a4965-1380-4d5e-8976-c275234637c3',\n",
+       "              'x': array([datetime.datetime(2023, 6, 30, 11, 0),\n",
+       "                          datetime.datetime(2023, 6, 30, 12, 0),\n",
+       "                          datetime.datetime(2023, 6, 30, 13, 0), ...,\n",
+       "                          datetime.datetime(2023, 9, 5, 22, 0),\n",
+       "                          datetime.datetime(2023, 9, 6, 1, 0),\n",
+       "                          datetime.datetime(2023, 9, 6, 2, 0)], dtype=object),\n",
+       "              'y': array([64.1100235 , 64.43887329, 65.03617096, ..., 73.78921509, 72.34223938,\n",
+       "                          71.8201828 ])},\n",
        "             {'fill': 'tonexty',\n",
        "              'fillcolor': 'rgba(45, 146, 255, 0.2)',\n",
        "              'line': {'color': 'rgba(45, 146, 255, 0.2)', 'width': 1},\n",
        "              'mode': 'lines',\n",
        "              'name': ('<b style=\"color:sandybrown\">[R' ... ' style=\"color:#fc9944\">~2h</i>'),\n",
        "              'type': 'scatter',\n",
-       "              'uid': '75b11061-5fcd-46be-92da-f2695e566bb7',\n",
-       "              'x': array([datetime.datetime(2023, 7, 1, 11, 0),\n",
-       "                          datetime.datetime(2023, 7, 1, 12, 0),\n",
-       "                          datetime.datetime(2023, 7, 1, 14, 0), ...,\n",
-       "                          datetime.datetime(2023, 9, 6, 23, 0),\n",
-       "                          datetime.datetime(2023, 9, 7, 1, 0),\n",
-       "                          datetime.datetime(2023, 9, 7, 2, 0)], dtype=object),\n",
-       "              'y': array([69.47322083, 69.82187653, 70.49516296, ..., 75.79014587, 75.63406372,\n",
-       "                          75.38924408])},\n",
+       "              'uid': '4f33fa44-c22e-479d-b5c0-9a17a476b5b6',\n",
+       "              'x': array([datetime.datetime(2023, 6, 30, 11, 0),\n",
+       "                          datetime.datetime(2023, 6, 30, 12, 0),\n",
+       "                          datetime.datetime(2023, 6, 30, 13, 0), ...,\n",
+       "                          datetime.datetime(2023, 9, 5, 22, 0),\n",
+       "                          datetime.datetime(2023, 9, 6, 1, 0),\n",
+       "                          datetime.datetime(2023, 9, 6, 2, 0)], dtype=object),\n",
+       "              'y': array([66.34957886, 66.80552673, 67.41294861, ..., 75.40890503, 74.19206238,\n",
+       "                          73.68942261])},\n",
        "             {'line': {'color': '#2d92ff', 'width': 2},\n",
        "              'mode': 'lines',\n",
        "              'name': '<b style=\"color:sandybrown\">[R]</b> Predicted <i style=\"color:#fc9944\">~2h</i>',\n",
        "              'type': 'scatter',\n",
-       "              'uid': '0191ba7c-c976-4f48-aa22-0589db9dbc3d',\n",
-       "              'x': array([datetime.datetime(2023, 7, 1, 11, 0),\n",
-       "                          datetime.datetime(2023, 7, 1, 12, 0),\n",
-       "                          datetime.datetime(2023, 7, 1, 14, 0), ...,\n",
-       "                          datetime.datetime(2023, 9, 6, 23, 0),\n",
-       "                          datetime.datetime(2023, 9, 7, 1, 0),\n",
-       "                          datetime.datetime(2023, 9, 7, 2, 0)], dtype=object),\n",
-       "              'y': array([68.09811401, 68.44752502, 69.18475342, ..., 74.56719971, 74.2272644 ,\n",
-       "                          73.89073181])},\n",
+       "              'uid': '6af6d3a2-8650-45db-9958-238d2b2c4c6c',\n",
+       "              'x': array([datetime.datetime(2023, 6, 30, 11, 0),\n",
+       "                          datetime.datetime(2023, 6, 30, 12, 0),\n",
+       "                          datetime.datetime(2023, 6, 30, 13, 0), ...,\n",
+       "                          datetime.datetime(2023, 9, 5, 22, 0),\n",
+       "                          datetime.datetime(2023, 9, 6, 1, 0),\n",
+       "                          datetime.datetime(2023, 9, 6, 2, 0)], dtype=object),\n",
+       "              'y': array([65.29745483, 65.7146759 , 66.31419373, ..., 74.57344818, 73.27126312,\n",
+       "                          72.74704742])},\n",
        "             {'marker': {'color': 'blue', 'size': 4, 'symbol': 'x'},\n",
        "              'mode': 'markers',\n",
        "              'name': '<b style=\"color:sandybrown\">[R]</b> Predicted <i style=\"color:#fc9944\">~2h</i>',\n",
        "              'type': 'scatter',\n",
-       "              'uid': '8dfc65f8-51f3-457f-8d22-53bd46ae4bfd',\n",
-       "              'x': array([datetime.datetime(2023, 7, 1, 11, 0),\n",
-       "                          datetime.datetime(2023, 7, 1, 12, 0),\n",
-       "                          datetime.datetime(2023, 7, 1, 14, 0), ...,\n",
-       "                          datetime.datetime(2023, 9, 6, 23, 0),\n",
-       "                          datetime.datetime(2023, 9, 7, 1, 0),\n",
-       "                          datetime.datetime(2023, 9, 7, 2, 0)], dtype=object),\n",
-       "              'y': array([68.09811401, 68.44752502, 69.18475342, ..., 74.56719971, 74.2272644 ,\n",
-       "                          73.89073181])},\n",
+       "              'uid': '02575b30-89d0-4cf3-b0c3-914e76dbee9e',\n",
+       "              'x': array([datetime.datetime(2023, 6, 30, 11, 0),\n",
+       "                          datetime.datetime(2023, 6, 30, 12, 0),\n",
+       "                          datetime.datetime(2023, 6, 30, 13, 0), ...,\n",
+       "                          datetime.datetime(2023, 9, 5, 22, 0),\n",
+       "                          datetime.datetime(2023, 9, 6, 1, 0),\n",
+       "                          datetime.datetime(2023, 9, 6, 2, 0)], dtype=object),\n",
+       "              'y': array([65.29745483, 65.7146759 , 66.31419373, ..., 74.57344818, 73.27126312,\n",
+       "                          72.74704742])},\n",
        "             {'marker': {'color': 'black', 'size': 4},\n",
        "              'mode': 'markers',\n",
        "              'name': '<b style=\"color:sandybrown\">[R]</b> Actual <i style=\"color:#fc9944\">~2h</i>',\n",
        "              'type': 'scatter',\n",
-       "              'uid': '16531e24-7309-489d-9372-9c42cc222633',\n",
+       "              'uid': 'f90be602-7c1d-4324-8717-98597291b678',\n",
        "              'x': array([datetime.datetime(2023, 6, 23, 12, 0),\n",
        "                          datetime.datetime(2023, 6, 23, 13, 0),\n",
        "                          datetime.datetime(2023, 6, 23, 15, 0), ...,\n",
@@ -1213,22 +1246,25 @@
        "})"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# forecast = model.predict(train_df.drop(columns=['snow', 'snowdepth']))\n",
+    "test_df.at[24441, 'snow'] = 0.01\n",
+    "test_df.at[24441, 'snowdepth'] = 0.01\n",
+    "print(test_df)\n",
+    "\n",
     "forecast = model.predict(test_df)\n",
     "\n",
-    "model.highlight_nth_step_ahead_of_each_forecast(48).plot(forecast, forecast_in_focus=48)\n",
+    "model.highlight_nth_step_ahead_of_each_forecast(24).plot(forecast, forecast_in_focus=24)\n",
     "# model.plot_components(forecast)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1236,17 +1272,17 @@
      "output_type": "stream",
      "text": [
       "                    ds          y   origin-0  origin-0 5.0%  origin-0 95.0%\n",
-      "0  2023-09-05 03:00:00  71.239998  70.494629      70.249489       70.795883\n",
-      "1  2023-09-05 04:00:00  70.519997  69.948181      69.522865       70.234451\n",
-      "2  2023-09-05 05:00:00  69.980003  69.443199      68.934250       69.900536\n",
-      "3  2023-09-05 06:00:00  69.620003  69.232010      68.543312       69.920677\n",
-      "4  2023-09-05 07:00:00  69.260002  68.903778      68.152618       69.649292\n",
+      "0  2023-09-05 03:00:00  71.239998  70.367126      70.160606       70.739624\n",
+      "1  2023-09-05 04:00:00  70.519997  69.761597      69.523476       70.199409\n",
+      "2  2023-09-05 05:00:00  69.980003  69.189224      68.872337       69.639328\n",
+      "3  2023-09-05 06:00:00  69.620003  68.728302      68.348709       69.277740\n",
+      "4  2023-09-05 07:00:00  69.260002  68.336075      67.927032       68.969360\n",
       "..                 ...        ...        ...            ...             ...\n",
-      "67 2023-09-07 22:00:00  73.400002  74.188736      72.329529       75.820557\n",
-      "68 2023-09-07 23:00:00  72.139999  74.084511      72.123520       75.898193\n",
-      "69 2023-09-08 00:00:00  71.599998  73.727966      71.704803       75.611877\n",
-      "70 2023-09-08 01:00:00  70.339996  73.191925      71.339920       75.142639\n",
-      "71 2023-09-08 02:00:00  69.440002  72.598228      70.647369       74.301285\n",
+      "67 2023-09-07 22:00:00  73.400002  74.248993      72.660568       75.874924\n",
+      "68 2023-09-07 23:00:00  72.139999  74.149567      72.473770       75.668343\n",
+      "69 2023-09-08 00:00:00  71.599998  73.834091      72.041672       75.415512\n",
+      "70 2023-09-08 01:00:00  70.339996  73.347473      71.469475       74.951363\n",
+      "71 2023-09-08 02:00:00  69.440002  72.756859      70.901581       74.375160\n",
       "\n",
       "[72 rows x 5 columns]\n"
      ]
